welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: not found: value estFAceMur
    if (estFAceMur()) {
        ^SnakeBuggle:21: error: type mismatch;
 found   : Unit
 required: Boolean
      tst = true}}
          ^SnakeBuggle:20: error: type mismatch;
 found   : Unit
 required: Boolean
    if (estFAceMur()) {
    ^SnakeBuggle:22: error: reassignment to val
  else  {test=false}
             ^